hotfix remove multi threading

--- a/app/templates/backward.html
+++ b/app/templates/backward.html
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
         <div class="col-md-6 col-sm-6">
-            <h5>Geometrics parameters</h5>
+            <h5>Geometric parameter</h5>
             {% for key, value in geo.items() %}
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-xs-12">{{ key }}</div>
