hotfix prior submission

--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -9,7 +9,7 @@
                 <h3>Meet the Team</h3>
                 <div class="static-content text-center">
                     <div class="row vertical-spacer">
-                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Ali.png') }}"></div>
+                        <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Ali2.png') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Chris.png') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Noushin.png') }}"></div>
                     </div>
