--- a/app/templates/backward.html
+++ b/app/templates/backward.html
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
         <div class="col-md-6 col-sm-6">
-            <h5>Geometric parameter</h5>
+            <h5>Geometric parameters</h5>
             {% for key, value in geo.items() %}
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-xs-12">{{ key }}</div>
@@ -40,7 +40,7 @@
                 <div class="col-md-6 col-sm-12 col-xs-12">{{ value }}</div>
             </div>
             {% endfor %}
-            <h5>Flow conditions</h5>
+            <h5>Flow condition</h5>
             {% for key, value in flow.items() %}
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-xs-12">{{ key }}</div>
