another hotfix download

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -24,7 +24,7 @@
                     <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('team') }}">Meet the Team</a></span></li>
                     <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('collaborate') }}">Collaborate with Us</a></span></li>
                     <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('publications') }}">Publications</a></span></li>
-                    <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('download') }}">Example Datasets</a></span></li>
+                    <li><span class="inner"><i class="fa fa-copy"></i><a href="http://dafdcad.org/download.html">Example Datasets</a></span></li>
                 </ul>
             </nav>
         </div>
