--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -10,18 +10,18 @@
             <div class="static-content">
                 <p>The following files are some of the example datasets.</p>
             </div>
-            <h5>Category 1</h5>
+            <h5>Datasets on Droplet Generation with DI Water and Mineral Oil</h5>
             <ul>
                 <li><a href="{{ url_for('dataset1') }}">Large-scale 998 data-points on droplet generation with Mineral oil and DI water</a></li>
                 <li><a href="{{ url_for('dataset2') }}">Bounded dataset of 888 data-points (5-500 Hz and 25-250 &mu;m)</a></li>
                 <li><a href="{{ url_for('dataset3') }}">Dripping regime dataset of 474 data-points (bounded)</a></li>
                 <li><a href="{{ url_for('dataset4') }}">Jetting regime dataset of 414 data-points (bounded)</a></li>
             </ul>
-            <h5>Category 2</h5>
+            <h5>Datasets on Droplet Generation with LB Bacterial Cell Media and Mineral Oil</h5>
             <ul>
                 <li><a href="{{ url_for('dataset5') }}">36 data-points on droplet generation with LB bacterial cell media and mineral oil used for transfer learning</a></li>
             </ul>
-            <h5>Category 3</h5>
+            <h5>Flow Rate Calculation Example</h5>
             <ul>
                 <li><a href="{{ url_for('dataset6') }}">Flow rate calculation example for a flow-focusing geometry</a></li>
             </ul>
