--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,14 +17,14 @@
             <nav>
                 <ul class="menu fa-ul">
                     <li><span class="inner"><i class="fa fa-home fa-lg"></i><a href="{{ url_for('index') }}">Home</a></span></li>
-                    <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('low_cost') }}">Low-Cost Fabrication</a></span></li>
-                    <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('droplet_based') }}">Droplet-Based Microfluidics</a></span></li>
-                    <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('single_cell') }}">Single-Cell Encapsulation</a></span></li>
-                    <li><span class="inner"><i class="fa fa-exclamation-circle fa-lg"></i><a href="{{ url_for('tips') }}">Tips and Tricks</a></span></li>
-                    <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('team') }}">Meet the Team</a></span></li>
-                    <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('collaborate') }}">Collaborate with Us</a></span></li>
-                    <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('publications') }}">Publications</a></span></li>
+                    <li><span class="inner"><i class="fa fa-exclamation-circle fa-lg"></i><a href="{{ url_for('tutorial') }}">Tutorial</a></span></li>
+                    <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('information') }}">More Information</a></span></li>
                     <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('download') }}">Example Datasets</a></span></li>
+                    <!--<li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('droplet_based') }}">Droplet-Based Microfluidics</a></span></li>
+                    <li><span class="inner"><i class="fa fa-info-circle fa-lg"></i><a href="{{ url_for('single_cell') }}">Single-Cell Encapsulation</a></span></li>-->
+                    <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('team') }}">Meet the Team</a></span></li>
+                    <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('publications') }}">Publications</a></span></li>
+                    <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('collaborate') }}">Collaborate with Us</a></span></li>
                 </ul>
             </nav>
         </div>
