--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,14 +17,14 @@
 					</div>
 				</div>
 			</div>
-			<div class="row md-spacer">
+			<!--<div class="row md-spacer">
 				<div class="col-md-12">
 					<img class="img-stakeholders" src="{{ url_for('static', filename='img/logo-Cidar-Color-small.png') }}"/>
 					<img class="img-stakeholders" src="{{ url_for('static', filename='img/damp-lab-logo-2x_1.png') }}"/>
 					<img class="img-stakeholders" src="{{ url_for('static', filename='img/BDC.png') }}"/>
 					<img class="img-stakeholders" src="{{ url_for('static', filename='img/BU.png') }}"/>
 				</div>
-			</div>
+			</div>-->
 			<div class="row md-spacer">
 				<div class="col-md-4"><div class="btn-1" onclick="window.location.href='#designAutomation'">Design Automation</div></div>
 				<div class="col-md-4"><div class="btn-2" onclick="window.location.href='#performancePrediction'">Performance Prediction</div></div>
@@ -32,6 +32,21 @@
 			</div>
 		</div>
 		<div class="col-md-2"></div>
+	</div>
+
+	<div class="row logo-footer">
+		<div class="col-md-6">
+			<a href='http://cidarlab.org' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/logo-Cidar-Color-small.png') }}"/></a>
+			<a href='https://www.damplab.org' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/damp-lab-logo-2x_1.png') }}"/></a>
+			<a href='https://www.bu.edu/kilachandcenter/the-centers/biological-design-center/' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/BDC.png') }}"/></a>
+			<a href='https://www.bu.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/BU.png') }}"/></a>
+		</div>
+		<div class="col-md-6 text-right">
+			<span class='copyright'>Copyright 2020, CIDAR Lab - All Rights Reserved.</span>
+			<a href='https://www.youtube.com/user/cidarlab' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/youtube.png') }}"/></a>
+			<a href='https://twitter.com/cidar_lab?lang=en' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/twitter.png') }}"/></a>
+			<a href='https://github.com/CIDARLAB' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/github.png') }}"/></a>
+		</div>
 	</div>
 </div>
 <div class="section" id="section-2">
