--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,9 +26,10 @@
 				</div>
 			</div>-->
 			<div class="row md-spacer">
-				<div class="col-md-4"><div class="btn-1" onclick="window.location.href='#designAutomation'">Design Automation</div></div>
-				<div class="col-md-4"><div class="btn-2" onclick="window.location.href='#performancePrediction'">Performance Prediction</div></div>
-				<div class="col-md-4"><div class="btn-3" onclick="window.location.href='{{ nn_server }}'">Neural Optimizer</div></div>
+				<div class="col-md-3"><div class="btn-1" onclick="window.location.href='#designAutomation'">Design Automation</div></div>
+				<div class="col-md-3"><div class="btn-2" onclick="window.location.href='#performancePrediction'">Performance Prediction</div></div>
+				<div class="col-md-3"><div class="btn-3" onclick="window.location.href='{{ nn_server }}'">Training for Scratch</div></div>
+				<div class="col-md-3"><div class="btn-4" onclick="window.location.href='{{ tl_server }}'">Transfer Learning</div></div>
 			</div>
 		</div>
 		<div class="col-md-2"></div>
