Integrated tolerance test into webapp

--- a/app/templates/forward.html
+++ b/app/templates/forward.html
@@ -32,6 +32,7 @@
             </div>
             {% endfor %}
             <div class="spacer"></div>
+            <div class="spacer"></div>
             <br/>
             <br/>
             <div class="row">
