--- a/app/templates/forward.html
+++ b/app/templates/forward.html
@@ -50,9 +50,6 @@
     <div class="row">
         <div class="col-md-12 twelve columns">
             <H1 class="title"> DAFD Design Report</H1>
-
-            <p><strong>Author:</strong> Please cite (doi number) <BR/>
-
             <p>Thank you for using DAFD, the first machine-learning design automation tool for droplet
                 microfluidics. Below is a summary
                 of your design, along with helpful information in troubleshooting possible fabrication errors.</p>
@@ -129,8 +126,8 @@
             <table style="width:60%;margin-left:auto;margin-right:auto;">
                 <tr>
                     <th>Generation rate (Hz)</th>
-                    <th>Droplet size (μm)</th>
-                    <th>Inferred droplet size (μm)</th>
+                    <th>Droplet diameter (μm)</th>
+                    <th>Inferred droplet diameter (μm)</th>
                     <th>Regime</th>
                 </tr>
                 <tr>
@@ -145,7 +142,7 @@
             <h1>Tolerances of Design:</h1>
             <p>Using your input tolerance of <strong>{{tolerance}}%</strong>, variance-based sensitivity analysis was
                 performed to identify the principal design features
-                for droplet size and generation rate to better troubleshoot any issues from device fabrication (top
+                for droplet diameter and generation rate to better troubleshoot any issues from device fabrication (top
                 left bar plots).
                 Large difference between predicted and observed behavior could be due to this. These principal
                 features were then
@@ -158,7 +155,7 @@
                 at the regime boundary. Droplet generation will be unstable, and therefore we recommend re-running
                 DAFD with different
                 constraints</em></p>
-            <h3>Droplet Size:</h3>
+            <h3>Droplet Diameter:</h3>
             <p><img class="img" src="{{ url_for('static', filename='img/'+fig_names[0]) }}" width="100%"></p>
             <h3>Generation Rate:</h3>
             <p><img class="img" src="{{ url_for('static', filename='img/'+fig_names[1]) }}" width="100%"></p>
@@ -167,7 +164,7 @@
                 visualizing the performance
                 changes caused by <strong>only</strong> changing flow rates. This provides a visual guide to
                 understanding how changing these rates
-                affect both droplet size and generation rate, rather than doing so through trial and error.
+                affect both droplet diameter and generation rate, rather than doing so through trial and error.
             <p><img class="img" src="{{ url_for('static', filename='img/'+fig_names[2]) }}" width="100%"></p>
             <h3>Questions? Contact Us:</h3>
             <p>Corresponding Authors: Ali Lashkaripour (<a href="lashkari@bu.edu">lashkari@bu.edu</a>) &amp; Prof.
