Added uDrop page

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,6 +25,7 @@
                     <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('team') }}">Meet the Team</a></span></li>
                     <li><span class="inner"><i class="fa fa-copy"></i><a href="{{ url_for('publications') }}">Publications</a></span></li>
                     <li><span class="inner"><i class="fa fa-users"></i><a href="{{ url_for('collaborate') }}">Collaborate with Us</a></span></li>
+                    <li><span class="inner"><i class="fa fa-camera"></i><a href="{{ url_for('udrop') }}">&mu;Drop Image Processing Tool</a></span></li>
                 </ul>
             </nav>
         </div>
