--- a/app/templates/uDrop.html
+++ b/app/templates/uDrop.html
@@ -12,7 +12,7 @@
                         generator from a high-speed video. The user inputs the general regions of droplet activity
                         in the video and then gets the drop generation rate and average size of each droplet for droplet
                         generation videos. Please see the video below for how the tool works. &mu;Drop can be downloaded
-                        from the CIDAR Lab Github: <a href="https://github.com/CIDARLAB/uDrop-Generation" target="_top">https://github.com/CIDARLAB/uDrop-Generation</a></p>
+                        from the CIDAR Lab Github: <a href="https://github.com/CIDARLAB/uDrop-Generation" target="_blank">https://github.com/CIDARLAB/uDrop-Generation</a></p>
                 </div>
             </div>
         </div>
