--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,10 +2,18 @@
 
 {%  block content %}
 <div class="section active" id="section-1">
-	<div class="row">
+    <!--TODO: Add in better GIF if possible
+    <div class="row logo-header">
+    <div class="row md-spacer">
+				<div class="col-md-12">
+					<img src="{{ url_for('static', filename='img/dgen.gif') }}" width="1500px"/>
+				</div>
+			</div>
+    </div>-->
+    <div class="row">
 		<div class="col-md-2"></div>
 		<div class="col-md-8 text-center">
-			<div class="row md-spacer">
+            <div class="row md-spacer">
 				<div class="col-md-12">
 					<img src="{{ url_for('static', filename='img/dafd-logo.png') }}" width="350px"/>
 				</div>
