--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -21,6 +21,13 @@
             <ul>
                 <li><a href="{{ url_for('dataset5') }}">36 data-points on droplet generation with LB bacterial cell media and mineral oil used for transfer learning</a></li>
             </ul>
+            <h5>Datasets on Transfer Learning Example</h5>
+            <ul>
+                <li><a href="{{ url_for('dataset7') }}">Model droplet diameter - dripping regime</a></li>
+                <li><a href="{{ url_for('dataset8') }}">Model droplet diameter - jetting regime</a></li>
+                <li><a href="{{ url_for('dataset9') }}">Model generation size - dripping regime</a></li>
+                <li><a href="{{ url_for('dataset10') }}">Model generation size - jetting regime</a></li>
+            </ul>
             <h5>Flow Rate Calculation Example</h5>
             <ul>
                 <li><a href="{{ url_for('dataset6') }}">Flow rate calculation example for a flow-focusing geometry</a></li>
