--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -21,6 +21,10 @@
             <ul>
                 <li><a href="{{ url_for('dataset5') }}">36 data-points on droplet generation with LB bacterial cell media and mineral oil used for transfer learning</a></li>
             </ul>
+            <h5>Datasets on Droplet Generation with DI Water and Light Mineral Oil</h5>
+            <ul>
+                <li><a href="{{ url_for('dataset11') }}">18 data-points on droplet generation with DI water and light mineral oil used for transfer learning</a></li>
+            </ul>
             <h5>Datasets on Transfer Learning Example</h5>
             <ul>
                 <li><a href="{{ url_for('dataset7') }}">Model droplet diameter - dripping regime</a></li>
