--- a/app/templates/tutorial.html
+++ b/app/templates/tutorial.html
@@ -8,10 +8,7 @@
             <div class="col-md-12 col-sm-12">
                 <h3>Tips for using DAFD</h3>
                 <div class="static-content">
-                <video width="800" controls>
-                    <source src="{{ url_for('static', filename='img/tutorial.mp4') }}" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
+                    <iframe width="800" height="450" src="https://www.youtube.com/embed/Iu9hfXpXPbs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="spacer"></div>
                 <div class="static-content">
