--- a/app/templates/publications.html
+++ b/app/templates/publications.html
@@ -8,9 +8,11 @@
             <div class="col-md-12 col-sm-12">
                 <h3>Publications</h3>
                 <div class="static-content">
-                    <p>For more information on Low-cost fabrication of microfluidic devices read Lashkaripour, Ali, Ryan Silva, and Douglas Densmore. "<a href="https://link.springer.com/article/10.1007/s10404-018-2048-2" target="_blank">Desktop micromilled microfluidics</a>." Microfluidics and Nanofluidics 22, no. 3 (2018): 31. or contact us at <a href="mailto:lashkari@bu.edu" target="_top">lashkari@bu.edu</a>.</p>
+                    <p>For more information on DAFD read Ali Lashkaripour et al. "<a href="https://doi.org/10.1038/s41467-020-20284-z" target="_blank">Machine learning enables design automation of microfluidic flow-focusing droplet generation</a>." Nature Communications 12, no. 25 (2021). or contact us at <a href="mailto:lashkari@bu.edu" target="_top">lashkari@bu.edu</a>.</p>
 
-                    <p>For more information of microfluidic flow-focusing droplet generation read Lashkaripour, Ali, Christopher Rodriguez, Luis Ortiz, and Douglas Densmore. "<a href="https://pubs.rsc.org/en/content/articlelanding/2019/lc/c8lc01253a" target="_blank">Performance tuning of microfluidic flow-focusing droplet generators</a>." Lab on a Chip 19, no. 6 (2019): 1041-1053. or contact us at <a href="mailto:lashkari@bu.edu" target="_top">lashkari@bu.edu</a>.</p>
+                    <p>For more information on Low-cost fabrication of microfluidic devices read Ali Lashkaripour, Ryan Silva, and Douglas Densmore. "<a href="https://link.springer.com/article/10.1007/s10404-018-2048-2" target="_blank">Desktop micromilled microfluidics</a>." Microfluidics and Nanofluidics 22, no. 3 (2018): 31. or contact us at <a href="mailto:lashkari@bu.edu" target="_top">lashkari@bu.edu</a>.</p>
+
+                    <p>For more information of microfluidic flow-focusing droplet generation read Ali Lashkaripour, Christopher Rodriguez, Luis Ortiz, and Douglas Densmore. "<a href="https://pubs.rsc.org/en/content/articlelanding/2019/lc/c8lc01253a" target="_blank">Performance tuning of microfluidic flow-focusing droplet generators</a>." Lab on a Chip 19, no. 6 (2019): 1041-1053. or contact us at <a href="mailto:lashkari@bu.edu" target="_top">lashkari@bu.edu</a>.</p>
                 </div>
             </div>
         </div>
